correct spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #wrapper {
   width: 850px;
   height: 600px;
-  bacground-color: #c00;
+  background-color: #c00;
   margin:0 auto;
   overflow: hidden;
 }
